<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_purple01"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">


    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="8dp"
        android:text="@string/my_vehicle"
        android:textColor="@color/text_purple01"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/main_car_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/background_purple02"
        app:cardCornerRadius="32dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_car_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:text="@string/main_car_title"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/main_car_battery_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:contentDescription="@string/battery"
                android:src="@drawable/ic_battery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_car_title_textview" />

            <TextView
                android:id="@+id/battery_text1_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/maximal_speed"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/main_car_battery_imageview"
                app:layout_constraintStart_toEndOf="@id/main_car_battery_imageview"
                app:layout_constraintTop_toBottomOf="@id/main_car_title_textview" />

            <TextView
                android:id="@+id/battery_text2_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/kilometre_left"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/main_car_battery_imageview"
                app:layout_constraintStart_toEndOf="@id/main_car_battery_imageview"
                app:layout_constraintTop_toBottomOf="@id/battery_text1_textview" />


            <ImageView
                android:id="@+id/main_car_speed_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:contentDescription="@string/speed"
                android:src="@drawable/ic_speed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_car_battery_imageview" />

            <TextView
                android:id="@+id/speed_text1_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/charge_percentage"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/main_car_speed_imageview"
                app:layout_constraintStart_toEndOf="@id/main_car_speed_imageview"
                app:layout_constraintTop_toTopOf="@+id/main_car_speed_imageview" />

            <TextView
                android:id="@+id/speed_text2_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="22dp"
                android:text="@string/charged_subtitle"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/main_car_speed_imageview"
                app:layout_constraintStart_toEndOf="@id/main_car_speed_imageview"
                app:layout_constraintTop_toTopOf="@+id/main_car_speed_imageview" />

            <ImageView
                android:id="@+id/main_car_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/speed"
                android:src="@drawable/img_main_car"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/chargers_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nearby_chargers"
        android:textColor="@color/text_purple01"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chargers_subtitle_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chargers_subtitle"
        android:textColor="@color/text_purple02"
        android:textSize="14sp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/item_1_charger_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/background_purple02"
        app:cardCornerRadius="32dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_1_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                android:layout_marginStart="12dp"
                android:contentDescription="null"
                android:src="@drawable/ic_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/charger_1_title_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/chargepoint_station"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_1_imageview"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/charger_1_address_street_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="4dp"
                android:text="@string/address_street"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_1_imageview"
                app:layout_constraintTop_toBottomOf="@+id/charger_1_title_textview"
                app:layout_constraintTop_toBottomf="@id/charger_1_title_textview" />

            <TextView
                android:id="@+id/charger_1_address_country_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="4dp"
                android:text="@string/address_country"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_1_imageview"
                app:layout_constraintTop_toBottomOf="@id/charger_1_address_street_textview" />

            <TextView
                android:id="@+id/charger_1_available_ports_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="18dp"
                android:text="@string/available_ports_number"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple03"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_1_imageview"
                app:layout_constraintTop_toBottomOf="@id/charger_1_address_country_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/item_2_charger_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/background_purple02"
        app:cardCornerRadius="32dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_2_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                android:layout_marginStart="12dp"
                android:contentDescription="null"
                android:src="@drawable/ic_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/charger_2_title_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/chargepoint_station"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_2_imageview"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/charger_2_address_street_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="4dp"
                android:text="@string/address_street"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_2_imageview"
                app:layout_constraintTop_toBottomOf="@+id/charger_2_title_textview"
                app:layout_constraintTop_toBottomf="@id/charger_2_title_textview" />

            <TextView
                android:id="@+id/charger_2_address_country_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="4dp"
                android:text="@string/address_country"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_2_imageview"
                app:layout_constraintTop_toBottomOf="@id/charger_2_address_street_textview" />

            <TextView
                android:id="@+id/charger_2_available_ports_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="18dp"
                android:text="@string/available_ports_number"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple03"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_2_imageview"
                app:layout_constraintTop_toBottomOf="@id/charger_2_address_country_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/item_3_charger_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/background_purple02"
        app:cardCornerRadius="32dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_3_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                android:layout_marginStart="12dp"
                android:contentDescription="null"
                android:src="@drawable/ic_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/charger_3_title_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/chargepoint_station"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_3_imageview"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/charger_3_address_street_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="4dp"
                android:text="@string/address_street"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_3_imageview"
                app:layout_constraintTop_toBottomOf="@+id/charger_3_title_textview"
                app:layout_constraintTop_toBottomf="@id/charger_3_title_textview" />

            <TextView
                android:id="@+id/charger_3_address_country_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="4dp"
                android:text="@string/address_country"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple02"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_3_imageview"
                app:layout_constraintTop_toBottomOf="@id/charger_3_address_street_textview" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="18dp"
                android:text="@string/available_ports_number"
                android:textAlignment="textStart"
                android:textColor="@color/text_purple03"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_3_imageview"
                app:layout_constraintTop_toBottomOf="@id/charger_3_address_country_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
